--- a/NMproject/NMproject/src/main/resources/static/css/UserManagement.css
+++ b/NMproject/NMproject/src/main/resources/static/css/UserManagement.css
@@ -1,203 +1,11 @@
- 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-  }
-  
-  .container {
-    width: 90%;
-    margin: 20px auto;
-    background: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  }
-  
-  .container>h1 {
-    text-align: center;
-    font-size: xx-large;
-    font-weight: bolder;
-  }
-  .bookModal-content h2 {
-    text-align: center ;
-    font-size: xx-large ;
-    font-weight: bolder ;
-  }
-  .modal-content>h2 {
-    text-align: center;
-    font-size: x-large;
-    font-weight: bolder;
-  }
-  .modal-content h3 {
-    text-align: center;
-    font-size: large;
-    font-weight: bolder;
-  }
-  
-  .search-bar {
-    margin-bottom: 20px;
-    display: flex;
-    gap: 10px;
-  }
-  
-  input[type="text"] {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  
-  button {
-    padding: 10px 15px !important;
-    border: none !important;
-    border-radius: 5px !important;
-    background-color: #007bff !important;
-    color: white !important;
-    cursor: pointer !important;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-  }
-  
-  table th,
-  table td {
-    border: 1px solid #ddd;
-    padding: 10px;
-    text-align: left;
-  }
-  
-  table th {
-    background-color: #f2f2f2;
-  }
-  
-  .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-content {
-    background: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    width: 50%;
-    position: relative;
-  }
-  
-  .modal-content .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 20px;
-  }
-  
-  .modal-content-book {
-    background: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    width: 400px;
-    position: relative;
-    margin: 0; 
-    place-items: center;
-  }
-  
-  .modal-content-book .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 20px;
-  }
-  
-  
-  .bookModal-content {
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    width: 400px;
-    max-width: 90%;
-    text-align: left;
-  }
-  
-  .bookModal img {
-    max-width: 100%;
-    border-radius: 8px;
-  }
 
-  .modal-book {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-    place-items: center;
-  }  
-/* Định nghĩa chiều rộng cho từng cột */
-#borrowedBooksTable th:nth-child(1), 
-#borrowedBooksTable td:nth-child(1) {
-  width: 5%; /* Chiều rộng cố định cho Borrow ID */
-}
-
-#borrowedBooksTable th:nth-child(2), 
-#borrowedBooksTable td:nth-child(2) {
-  width: 5%; /* Chiều rộng cố định cho User ID */
-}
-
-#borrowedBooksTable th:nth-child(3), 
-#borrowedBooksTable td:nth-child(3) {
-  width: 40%; /* Chiều rộng cố định cho Book ID */
-}
-
-#borrowedBooksTable th:nth-child(4), 
-#borrowedBooksTable td:nth-child(4) {
-  width: 20%; /* Cột Book Title rộng hơn để chứa tiêu đề sách dài */
-}
-
-#borrowedBooksTable th:nth-child(5), 
-#borrowedBooksTable td:nth-child(5) {
-  width: 20%; /* Chiều rộng cho Borrow Date */
-}
-
-#borrowedBooksTable th:nth-child(6), 
-#borrowedBooksTable td:nth-child(6) {
-  width: 10%; /* Chiều rộng cho Due Date */
-}
-
-
-
-/*home*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 :root {
     --first-color: black;
     --second-color: #F5A623;
     --white-color: #ededed;
 
-    --body-font: 'Poppins', sans-serif;
-    --small-font-size: 0.875rem;
-
-    @media screen and (min-width: 768px) {
-        --small-font-size: 0.638rem;
-    }
+    --body-font: 'Open Sans', sans-serif;
 }
 
 :root {
@@ -225,10 +33,6 @@ body {
     transition: 0.5s
 }
 
-h1 {
-    margin: 0;
-}
-
 ul,
 li {
     margin: 0;
@@ -239,9 +43,8 @@ li {
 
 a {
     text-decoration: none;
-
 }
-
+/* thanh navbar */
 .l-navbar {
     position: fixed;
     top: 0;
@@ -251,7 +54,7 @@ a {
     background: black;
     padding: 1.25rem 0.5rem 2rem;
     transition: 0.5s;
-    z-index: var(--z-fixed);
+    z-index: var(--z-modal);
 }
 
 .nav {
@@ -351,7 +154,7 @@ a {
     transform: rotate(180deg);
     transition: 0.2s;
 }
-
+/* mở rộng trang => nội dung kéo giãn theo */
 .expander {
     padding: 1rem 0 0 5rem;
     padding-left: 58x;
@@ -362,27 +165,32 @@ a {
     color: var(--first-color);
     transition: 0.3s;
 }
+/* drop menu profile */
 
 .user-pic {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     cursor: pointer;
+    border: 1px solid #333;
 }
 
-.noti-icon {
+.noti-icon, #cart-icon {
     font-size: 150%;
     cursor: pointer;
-    color: #12192C;
+    color: var(--white-color);
 }
 
 .menu-profile {
+    width: 100%;
+    background-color: black;
     position: fixed;
-    top: 10px;
-    right: 20px;
+    top: 0px;
+    right: 0px;
     display: flex;
     justify-content: flex-end;
     padding: 10px;
+    z-index: 201;
 }
 
 .menu-profile-icon {
@@ -440,4 +248,309 @@ a {
 .drop-menu-profile a .user-pic-in {
     margin-right: 8px;
 }
-/*home*/
+
+  .container {
+    position: relative;
+    top: 30px;
+    width: 85%;
+    margin: 20px auto;
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+  
+  .container>h1 {
+    text-align: center;
+    font-size: xx-large;
+    font-weight: bolder;
+  }
+  .bookModal-content h2 {
+    text-align: center ;
+    font-size: xx-large ;
+    font-weight: bolder ;
+  }
+  .modal-content>h2 {
+    text-align: center;
+    font-size: x-large;
+    font-weight: bolder;
+  }
+  .modal-content h3 {
+    text-align: center;
+    font-size: large;
+    font-weight: bolder;
+  }
+  
+  .search-bar {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 10px;
+  }
+  
+  input[type="text"] {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+  }
+  
+  .container button {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+  }
+  .container button:hover {
+    background-color: #0056b3;
+  }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+  }
+  
+  table th,
+  table td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: center
+  }
+  
+  table th {
+    background-color: #f2f2f2;
+  }
+  
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 50%;
+    height: 500px;
+    overflow-y: auto;
+    position: relative;
+  }
+  .modal-content button {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+  }
+  .modal-content button:hover{
+    background-color: #0056b3;
+  }
+  #close-modal {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 25px;
+    height: 25px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: #007bff;
+    cursor: pointer;
+    font-size: 20px;
+  }
+  #close-modal:hover{
+    background-color: #0056b3;
+  }
+  .modal-content-book {
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    width: 400px;
+    position: relative;
+    margin: 0; 
+    place-items: center;
+  }
+  
+  .modal-content-book .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+  }
+  
+  
+  
+/* Định nghĩa chiều rộng cho từng cột */
+#borrowedBooksTable th:nth-child(1), 
+#borrowedBooksTable td:nth-child(1) {
+  width: 5%; /* Chiều rộng cố định cho Borrow ID */
+}
+
+#borrowedBooksTable th:nth-child(2), 
+#borrowedBooksTable td:nth-child(2) {
+  width: 5%; /* Chiều rộng cố định cho User ID */
+}
+
+#borrowedBooksTable th:nth-child(3), 
+#borrowedBooksTable td:nth-child(3) {
+  width: 40%; /* Chiều rộng cố định cho Book ID */
+}
+
+#borrowedBooksTable th:nth-child(4), 
+#borrowedBooksTable td:nth-child(4) {
+  width: 20%; /* Cột Book Title rộng hơn để chứa tiêu đề sách dài */
+}
+
+#borrowedBooksTable th:nth-child(5), 
+#borrowedBooksTable td:nth-child(5) {
+  width: 20%; /* Chiều rộng cho Borrow Date */
+}
+
+#borrowedBooksTable th:nth-child(6), 
+#borrowedBooksTable td:nth-child(6) {
+  width: 10%; /* Chiều rộng cho Due Date */
+}
+ /* see details of book */
+#title-details-book{
+    position: fixed;
+    top: 15%;
+    left: 35%;
+    width: 500px;
+    height: 40px;
+    background-color: #333;
+    z-index: 502;
+    font-size: 24px;
+    font-weight: bolder;
+    border: 1px solid #dedede;
+    border-left: none;
+    border-right: none;
+    border-top:none;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    color: #dedede;
+    z-index: 502;
+    display: none;
+    transition: 0.3s;
+}
+#close-details-book{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 25px;
+    height: 25px;
+    color: black;
+    border-top-right-radius: 10px ;
+    border-bottom-left-radius: 10px;
+    background-color: #cbdcf5;
+    cursor: pointer;
+    z-index: 503;
+}
+#close-details-book:hover{
+    background-color: var(--second-color);
+    color: #020e1f;
+}
+.see-book-details{
+    position: fixed;
+    border-radius: 8px;
+    left: 35%;
+    top: 20%;
+    width: 500px;
+    height: 500px;
+    padding-right: 5px ;
+    background-color: #dedede;
+    border-radius: 2px solid #333;
+    box-shadow: 2px 2px 8px #333;
+    z-index: 501;
+    color: var(--white-color);
+    overflow-y: auto;
+    overflow-x: hidden;
+    transform: scale(0);
+    transition: transform .3s ease;
+} 
+.see-book-details.active{
+    transform: scale(1);
+}
+.see-book-details #picture-book {
+    position: relative;
+    /* align-items: center; */
+    top: 10px;
+    width: 150px;
+    height: 200px;
+    padding-left: 10px;
+    padding-top: 10px;
+    margin-bottom: 110px;
+    cursor: pointer;
+    
+}
+.see-book-details button {
+  position: absolute;
+  left: 220px;
+  width: 60px;
+  height: 25px;
+  background-color: #007bff;
+  cursor: pointer;
+  border-radius: 4px;
+}
+.see-book-details button:hover{
+  background-color: #0056b3;
+}
+.see-book-details h2 {
+    position: relative;
+    max-width: 55%;
+    height: 75px;
+    top: -170px;
+    left: 180px;
+    margin-bottom: 10px;
+}
+.details-overview p{
+    position: relative;
+    color: black;
+    top: -90px;
+    padding-left: 10px;
+    margin-top: 0px;
+    margin-bottom: 5px;
+ 
+}
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    display: none; 
+    z-index: 500;
+}
+.overlay.active {
+    display: block;
+}
+.notification {
+    position: fixed;
+    top: -110px; 
+    left: 55%;
+    transform: translateX(-50%);
+    display: inline-block;
+    white-space: nowrap;
+    width: auto;
+    background-color: #41eea0;
+    color: black;
+    padding: 15px;
+    font-size: 16px;
+    border-radius: 5px;
+    text-align: center;
+    z-index: 1000;
+    transition: top 0.5s ease-in-out;
+}
+.notification.show {
+    top: 0;
+}
