--- a/NMproject/NMproject/src/main/resources/static/css/home.css
+++ b/NMproject/NMproject/src/main/resources/static/css/home.css
@@ -747,7 +747,9 @@ a {
     top: -110px; 
     left: 55%;
     transform: translateX(-50%);
-    width: 250px;
+    display: inline-block;
+    white-space: nowrap;
+    width: auto;
     background-color: #41eea0;
     color: black;
     padding: 15px;
