--- a/NMproject/NMproject/src/main/resources/templates/home.html
+++ b/NMproject/NMproject/src/main/resources/templates/home.html
@@ -27,11 +27,11 @@
                         <ion-icon name="home" class="nav_icon" title="Trang chủ"></ion-icon>
                         <span class="nav_text">Trang chủ</span>
                     </a>
-                    <a href="http://localhost:8081/api/home/BookManagement" class="nav_link">
+                    <a href="#" onclick="checkRoleBM()"class="nav_link">
                         <ion-icon name="book" class="nav_icon" title="Quản lý sách"></ion-icon>
                         <span class="nav_text">Quản lý sách</span>
                     </a>
-                    <a href="#" class="nav_link">
+                    <a href="#" onclick="checkRoleUM()" class="nav_link">
                         <ion-icon name="people" class="nav_icon" title="Quản lý người dùng"></ion-icon>
                         <span class="nav_text">Quản lý người dùng</span>
                     </a>
