--- a/NMproject/NMproject/src/main/resources/templates/UserManagement.html
+++ b/NMproject/NMproject/src/main/resources/templates/UserManagement.html
@@ -41,7 +41,7 @@
                 </ul>
             </div>
             <div>
-                <a href="./loginRegister.html" class="nav_link" id="logout">
+                <a href="http://localhost:8081/api/auth/login" class="nav_link" id="logout">
                     <ion-icon name="log-out" class="nav_icon" title="Đăng xuất"></ion-icon>
                     <span class="nav_text">Đăng xuất</span>
                 </a>
