--- a/NMproject/NMproject/src/main/resources/static/css/loginRegister.css
+++ b/NMproject/NMproject/src/main/resources/static/css/loginRegister.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url(/hinh_anh/background.avif);
+    background-image: url(/hinh_anh/background1.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
