--- a/NMproject/NMproject/src/main/resources/templates/home.html
+++ b/NMproject/NMproject/src/main/resources/templates/home.html
@@ -38,7 +38,7 @@
                 </ul>
             </div>
             <div>
-                <a href="./loginRegister.html" class="nav_link" id="logout">
+                <a href="http://localhost:8081/api/auth/login" class="nav_link" id="logout">
                     <ion-icon name="log-out" class="nav_icon" title="Đăng xuất"></ion-icon>
                     <span class="nav_text">Đăng xuất</span>
                 </a>
@@ -240,12 +240,12 @@
     <section id="in-cart">
         <button class="actions-in-cart" onclick="pickAllElementInCart(this)">Chọn tất cả</button>
         <button class="actions-in-cart" onclick="deleteElementsInCart()">Xóa nhiều</button>
-        <button class="actions-in-cart">Mượn sách</button>
+ 
         <table id="list-info-cart">
             <thead>
                 <tr>
                     <th>Mã sách</th>
-                    <th>Ảnh sách</th>
+                  
                     <th>Tên sách</th>
                     <th>Thể loại</th>
                     <th>Action</th>
@@ -277,8 +277,7 @@
         <table id="list-book-borrow">
             <thead>
                 <tr>
-                    <th>Mã sách</th>
-                    <th>Ảnh sách</th>
+                    <th>Mã sách</th>                
                     <th>Tên sách</th>
                     <th>Ngày mượn</th>
                     <th>Hạn trả</th>
